--- a/Nettsia/index.html
+++ b/Nettsia/index.html
@@ -14,9 +14,19 @@
     		<p>
     			Velkommen til Romlingenes Landforbund! Her kan du finne alt i frå Podcaster, <br> Forum, Wiki, og Merch når me kjem oss å langt.
     		</p> 	 
-            <h2>
-            	//Podcast under denne!
-            </h2>	            
+    		<div class="section">
+                <h2>
+            	    Podcast under denne
+                </h2>
+            </div>
+            <p>
+            	Her ska me sitta ein ein podcast player av eit slag 
+            </p>
+            <br><br><br><br><br><br>
+            <div class="section">
+            	<h2>Våre Stolte Sponsorar</h2>            	
+            </div>
+            <img src="assets/SSAT.png">
     	</div>    	
     </body>
 </html>
