--- a/Nettsia/podcasts.html
+++ b/Nettsia/podcasts.html
@@ -9,26 +9,20 @@
     <body>
     	<div class="container">
     		<div class="header">
-    			<h1>Romlingenes Landsforbund</h1>
-    		</div>    		
-            <div> 
-                <p>
-                    Velkommen til Romlingenes Landforbund! Her kan du finne alt i frå Podcaster, <br> 
-                    Forum, Wiki, og Merch når me kjem oss å langt.
-                </p> 
-            </div>	
-    			 
+    			<h1>Podcasts</h1>
+    		</div>    			
+    		<p>
+                <a href="index.html">Back to Home!</a> <br>
+    			Denne siden er dedikert til Romling Podcasten. Under finner du ei lista <br> av tidligare podcastar.
+    		</p> 	 
     		<div class="section">
                 <h2>
-            	    Denne Vekas Podcast
+            	    Liste over tidligare podcastar
                 </h2>
             </div>
-            <div>
-                <p>
-            	    Får å sjå tidligare podcast besøk denne linken: <a href="podcasts.html">Tidligare Podcasts</a> <br>
-            	    Her ska me sitta ein ein podcast player av eit slag 
-                </p>
-            </div>
+            <p>
+            	Her ska me linka te podcasts
+            </p>
             <br><br><br><br><br><br>
             <div class="section">
             	<h2>Våre Stolte Sponsorar</h2>            	
