Fiksa linkene og låg til ein player

--- a/Nettsia/index.html
+++ b/Nettsia/index.html
@@ -14,22 +14,23 @@
             <div> 
                 <p>
                     Velkommen til Romlingenes Landforbund! Her kan du finne alt i frå Podcaster, <br> 
-                    Forum, Wiki, og Merch når me kjem oss å langt.
+                    <a href="#">Forum</a>, <a href="#">Wiki</a>, og <a href="#">Merch</a> når me kjem oss å langt.
                 </p> 
             </div>	
     			 
     		<div class="section">
                 <h2>
             	    Denne Vekas Podcast
-                </h2>
+                </h2>                
             </div>
             <div>
                 <p>
             	    Får å sjå tidligare podcast besøk denne linken: <a href="podcasts.html">Tidligare Podcasts</a> <br>
             	    Her ska me sitta ein ein podcast player av eit slag 
                 </p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/Plzk-xvVS68" frameborder="0" allowfullscreen></iframe>
             </div>
-            <br><br><br><br><br><br>
+            <br><br><br>
             <div class="section">
             	<h2>Våre Stolte Sponsorar</h2>            	
             </div>
